[gd_scene load_steps=10 format=4 uid="uid://oafn2ku32rqj"]

[ext_resource type="Script" uid="uid://bn54vq7now201" path="res://scripts/tasks/light_task.gd" id="1_px3tk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4pxvq"]
resource_name = "Material.001"
cull_mode = 2
albedo_color = Color(0.596667, 0.705247, 0.90679, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_hyw0q"]
_surfaces = [{
"aabb": AABB(-1.5, 0, -1, 3, 0.0516871, 2),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAQADAAIAAAAEAAEAAgADAAUAAgAFAAAAAAAGAAQAAAAFAAYABAAHAAEAAQAHAAMABAAGAAcABQADAAcABQAHAAYA"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AADAvwAAAAAAAIA/AADAPwAAAAAAAIC/AADAvwAAAAAAAIC/AADAv9S1Uz0AAIC/AADAPwAAAAAAAIA/AADAv9S1Uz0AAIA/AADAP9S1Uz0AAIA/AADAP9S1Uz0AAIC/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_jbwkd"]
resource_name = "light_card_Plane"
_surfaces = [{
"aabb": AABB(-1.5, 0, -1, 3, 0.0516871, 2),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAAAAAACAPwAAgD8AAAAAAACAPwAAgD8AAAAAAAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgD8AAAAAAAAAAAAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAAAA"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_4pxvq"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AADAvwAAAAAAAIA/AADAPwAAAAAAAIC/AADAvwAAAAAAAIC/AADAPwAAAAAAAIA/AADAv9S1Uz0AAIA/AADAP9S1Uz0AAIC/AADAP9S1Uz0AAIA/AADAv9S1Uz0AAIC/AADAPwAAAAAAAIC/AADAv9S1Uz0AAIC/AADAvwAAAAAAAIC/AADAP9S1Uz0AAIC/AADAvwAAAAAAAIA/AADAP9S1Uz0AAIA/AADAPwAAAAAAAIA/AADAv9S1Uz0AAIA/AADAPwAAAAAAAIA/AADAP9S1Uz0AAIC/AADAPwAAAAAAAIC/AADAP9S1Uz0AAIA/AADAvwAAAAAAAIC/AADAv9S1Uz0AAIA/AADAvwAAAAAAAIA/AADAv9S1Uz0AAIC//38AAP///z//fwAA////P/9/AAD///8//38AAP///z//f///////v/9///////+//3///////7//f///////v/////////+//////////7//////////v/////////+//3//f////z//f/9/////P/9//3////8//3//f////z////9/////v////3////+/////f////7////9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hyw0q")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_krh07"]
data = PackedVector3Array(-1.5, 0, 1, 1.5, 0, -1, -1.5, 0, -1, -1.5, 0, 1, 1.5, 0, 1, 1.5, 0, -1, -1.5, 0.0517, 1, 1.5, 0.0517, -1, 1.5, 0.0517, 1, -1.5, 0.0517, 1, -1.5, 0.0517, -1, 1.5, 0.0517, -1, 1.5, 0, -1, -1.5, 0.0517, -1, -1.5, 0, -1, 1.5, 0, -1, 1.5, 0.0517, -1, -1.5, 0.0517, -1, -1.5, 0, 1, 1.5, 0.0517, 1, 1.5, 0, 1, -1.5, 0, 1, -1.5, 0.0517, 1, 1.5, 0.0517, 1, 1.5, 0, 1, 1.5, 0.0517, -1, 1.5, 0, -1, 1.5, 0, 1, 1.5, 0.0517, 1, 1.5, 0.0517, -1, -1.5, 0, -1, -1.5, 0.0517, 1, -1.5, 0, 1, -1.5, 0, -1, -1.5, 0.0517, -1, -1.5, 0.0517, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nwi23"]
resource_name = "Material.001"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_kp8c5"]
_surfaces = [{
"aabb": AABB(-0.100872, 0, -1, 1.10087, 2, 2),
"format": 34359742465,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAAAEAAEAEAACAAEABAAQAAEAEQAAAAIABAAAABEAEQACABIAEAASAAIABAARABMABAATABAAEwARABQAFAARABIAEwAVABAAEwAUABYAEwAWABUAFAASABcAFgAUAAMAAwAUABcAFgADAAUABQADAAYAAwAXAAYAFgAFAAcABQAGAAcAFgAHABUABwAGABcABwAXABUACQAXABIACgAVABcACgAXAAkACwAVAAoACwAQABUACAASABAACAAQAAsACQASAAgACgAMAAsACAANAAkACQAOAAoACgAOAAwACQANAA4ACwAMAA8ACwAPAAgADgAPAAwACAAPAA0ADgANAA8A"),
"lods": [0.00046587, PackedByteArray("AAABAAIAAwAAAAIAAAAEAAEABAAAAAUABQAAAAMABAAFAAEABQADAAYAAwACAAYABQAHAAEABQAGAAcACAACAAEACQAGAAIACQACAAgACgAHAAYACgAGAAkACwABAAcACwAHAAoACAABAAsACgAMAAsACAANAAkACQAOAAoACgAOAAwACQANAA4ACwAMAA8ACwAPAAgADgAPAAwACAAPAA0ADgANAA8A")],
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("0JXOvQAAAAAAAIA/0JXOvQAAAEAAAIC/0JXOvQAAAEAAAIA/zMxMPgAAAAAAAIA/0JXOvQAAAAAAAIC/zMxMPgAAAAAAAIC/AACAPwAAAEAAAIA/AACAPwAAAEAAAIC/kAH+PgAAAEAj5GI/s3UuPwAAAEAj5GI/s3UuPwAAAEAj5GK/kAH+PgAAAEAj5GK/ESs2PXqjFz6rUBS/+KApPnqjFz6lUBQ/+KApPnqjFz6rUBS/ESs2PXqjFz6lUBQ/pyH3PgAAAEAAAIC/sBVwPQAAAAAAAIA/pyH3PgAAAEAAAIA/sRVwPQAAAAAAAIC/ddXuPQAAAAAAAIA/qOUxPwAAAEAAAIC/ddXuPQAAAAAAAIC/qOUxPwAAAEAAAIA/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_riy27"]
resource_name = "switch_for_lightning_card_Cube_001"
_surfaces = [{
"aabb": AABB(-0.100872, 0, -1, 1.10087, 2, 2),
"attribute_data": PackedByteArray("AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AAMA+AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AAMA+AACAPgAAAD4AAAA/AADAPgAAAD8AACA/AAAAPwAAID8AAEA/AADAPgAAQD9VSz0/BCT/PldLPT/824A+V0s9P/zbgD5VSz0/BCT/PgAAwD4AAIA+AAAgPwAAAAAAACA/AACAPgAAwD4AAAAAVUs9PwQk/z4AACA/AAAAP2eEMj8CJP8+AAAgPwAAgD4AAGA/AAAAP2iEMj/824A+V0s9P/zbgD4AAGA/AACAPmeEMj8CJP8+V0s9P/zbgD5VSz0/BCT/PmiEMj/824A+aIQyP/zbgD5nhDI/AiT/PmeEMj8CJP8+aIQyP/zbgD5XSz0//NuAPmiEMj/824A+aIQyP/zbgD5XSz0//NuAPmeEMj8CJP8+VUs9PwQk/z5VSz0/BCT/PmeEMj8CJP8+AADAPpK8ET8AACA/krwRPwAAwD4qEx4/AAAgPyoTHj8AAMA+WLMHPgAAID9Yswc+AADAPrgNOT4AACA/uA05PtyGnD4AAAA/3IacPgAAgD6r2YM+AAAAP6zZgz4AAIA+KhM+PwAAAD8qEz4/AACAPpK8MT8AAAA/krwxPwAAgD4="),
"format": 34359742487,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAAADAAEAMAANADEAMAAMAA0AMgAwADEAMgAxADMADwAyADMADwAzAA4ABAAFAAYABAAHAAUANAAVADUANAAXABUANgA0ADUANgA1ADcAFAA2ADcAFAA3ABYAOAAKAAgAOAA5AAoAOgA5ADgAOgA7ADkACwA7ADoACwAJADsAPAAfABwAPAA9AB8AHgA9ADwAHQA9AB4AHgA8ABgAGAA8AD4AGAA+ABoAHQA/AD0AGgA/AB0AGgA+AD8AGQA/AD4AGQAbAD8AEAARABIAEAATABEAIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0A"),
"lods": [0.00046587, PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACwAJAAgADAANAA4ADwAMAA4AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGgAZABsAGAAcABkAGgAbAB0AHgAcABgAHQAbAB8AHgAfABwAHQAfAB4AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0A")],
"material": SubResource("StandardMaterial3D_nwi23"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 64,
"vertex_data": PackedByteArray("0JXOvQAAAAAAAIA/0JXOvQAAAEAAAIC/0JXOvQAAAEAAAIA/0JXOvQAAAAAAAIC/zMxMPgAAAAAAAIC/AACAPwAAAEAAAIA/AACAPwAAAEAAAIC/zMxMPgAAAAAAAIA/zMxMPgAAAAAAAIC/0JXOvQAAAAAAAIA/zMxMPgAAAAAAAIA/0JXOvQAAAAAAAIC/zMxMPgAAAAAAAIC/AACAPwAAAEAAAIC/0JXOvQAAAEAAAIC/0JXOvQAAAAAAAIC/kAH+PgAAAEAj5GK/ESs2PXqjFz6lUBQ/kAH+PgAAAEAj5GI/ESs2PXqjFz6rUBS/zMxMPgAAAAAAAIA/0JXOvQAAAEAAAIA/AACAPwAAAEAAAIA/0JXOvQAAAAAAAIA/kAH+PgAAAEAj5GK/AACAPwAAAEAAAIC/s3UuPwAAAEAj5GK/AACAPwAAAEAAAIA/0JXOvQAAAEAAAIC/s3UuPwAAAEAj5GI/kAH+PgAAAEAj5GI/0JXOvQAAAEAAAIA/+KApPnqjFz6rUBS/ESs2PXqjFz6lUBQ/ESs2PXqjFz6rUBS/+KApPnqjFz6lUBQ/s3UuPwAAAEAj5GI/+KApPnqjFz6rUBS/s3UuPwAAAEAj5GK/+KApPnqjFz6lUBQ/kAH+PgAAAEAj5GI/+KApPnqjFz6lUBQ/s3UuPwAAAEAj5GI/ESs2PXqjFz6lUBQ/s3UuPwAAAEAj5GK/ESs2PXqjFz6rUBS/kAH+PgAAAEAj5GK/+KApPnqjFz6rUBS/ddXuPQAAAAAAAIC/qOUxPwAAAEAAAIC/sRVwPQAAAAAAAIC/pyH3PgAAAEAAAIC/sBVwPQAAAAAAAIA/pyH3PgAAAEAAAIA/ddXuPQAAAAAAAIA/qOUxPwAAAEAAAIA/ddXuPQAAAAAAAIC/ddXuPQAAAAAAAIA/sRVwPQAAAAAAAIC/sBVwPQAAAAAAAIA/pyH3PgAAAEAAAIC/pyH3PgAAAEAAAIA/qOUxPwAAAEAAAIC/qOUxPwAAAEAAAIA/AAD/f/9///8AAP9//3///wAA/3//f///AAD/f/9///9s221bkaS17WzbbVuRpLXtbNttW5Gkte1s221bkaS17f9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//////5Gkte3/////85yE8f//////f////////+CSjvbn5udm////v+fm52b///+/5+bnZv///7/n5udm////v/9//39JnVnx/3//f2yVSPX/f/9/kaS17f9//3//f////3///wAAv+X/f///AAD/v/9///9FS/+//3///wAA/7//f///AAD/v/9///8AAL/l/3///0VL/7//f///AAD/v/9///8AAP+//3///wAA/7//f///AAD/v/9///8AAP+/4hvhm////7/iG+Gb////v+Ib4Zv///+/4hvhm////7/M7f//////v8zt//////+/zO3//////7/M7f//////v/9/MpL///8//38ykv///z//fzKS////P/9/MpL///8//////6+fJvD/////O5rg8v/////+mH/z/////x+O7vj/f/9/tIyk+f9//3/6mQHz/3//f0CZXvP/f/9/VqFT7/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3///wAAFcL/f///uQT/v/9///+5BP+//3///wAAFcI=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_kp8c5")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_3ixr0"]
data = PackedVector3Array(-0.1009, 0, 1, -0.1009, 2, -1, -0.1009, 2, 1, -0.1009, 0, 1, -0.1009, 0, -1, -0.1009, 2, -1, 0.1166, 0, -1, 1, 2, -1, 0.6949, 2, -1, 0.1166, 0, -1, 0.2, 0, -1, 1, 2, -1, 0.0586, 0, -1, 0.1166, 0, -1, 0.6949, 2, -1, 0.0586, 0, -1, 0.6949, 2, -1, 0.4827, 2, -1, -0.1009, 0, -1, 0.0586, 0, -1, 0.4827, 2, -1, -0.1009, 0, -1, 0.4827, 2, -1, -0.1009, 2, -1, 0.2, 0, -1, 1, 2, 1, 1, 2, -1, 0.2, 0, -1, 0.2, 0, 1, 1, 2, 1, 0.0586, 0, 1, -0.1009, 2, 1, 0.4827, 2, 1, 0.0586, 0, 1, -0.1009, 0, 1, -0.1009, 2, 1, 0.1166, 0, 1, 0.0586, 0, 1, 0.4827, 2, 1, 0.1166, 0, 1, 0.4827, 2, 1, 0.6949, 2, 1, 0.2, 0, 1, 0.1166, 0, 1, 0.6949, 2, 1, 0.2, 0, 1, 0.6949, 2, 1, 1, 2, 1, 0.1166, 0, -1, 0.2, 0, 1, 0.2, 0, -1, 0.1166, 0, -1, 0.1166, 0, 1, 0.2, 0, 1, 0.0586, 0, -1, 0.1166, 0, 1, 0.1166, 0, -1, 0.0586, 0, -1, 0.0586, 0, 1, 0.1166, 0, 1, -0.1009, 0, -1, 0.0586, 0, 1, 0.0586, 0, -1, -0.1009, 0, -1, -0.1009, 0, 1, 0.0586, 0, 1, 0.4827, 2, -1, -0.1009, 2, 1, -0.1009, 2, -1, 0.4827, 2, -1, 0.4827, 2, 1, -0.1009, 2, 1, 0.4961, 2, 0.8863, 0.4827, 2, 1, 0.4827, 2, -1, 0.6815, 2, 0.8863, 0.4827, 2, 1, 0.4961, 2, 0.8863, 0.4961, 2, 0.8863, 0.4827, 2, -1, 0.4961, 2, -0.8863, 0.4961, 2, -0.8863, 0.4827, 2, -1, 0.6949, 2, -1, 0.4961, 2, -0.8863, 0.6949, 2, -1, 0.6815, 2, -0.8863, 0.6815, 2, 0.8863, 0.6949, 2, 1, 0.4827, 2, 1, 0.6815, 2, -0.8863, 0.6949, 2, 1, 0.6815, 2, 0.8863, 0.6815, 2, -0.8863, 0.6949, 2, -1, 0.6949, 2, 1, 1, 2, -1, 0.6949, 2, 1, 0.6949, 2, -1, 1, 2, -1, 1, 2, 1, 0.6949, 2, 1, 0.4961, 2, -0.8863, 0.0445, 0.1481, 0.5794, 0.4961, 2, 0.8863, 0.4961, 2, -0.8863, 0.0445, 0.1481, -0.5794, 0.0445, 0.1481, 0.5794, 0.1657, 0.1481, -0.5794, 0.0445, 0.1481, 0.5794, 0.0445, 0.1481, -0.5794, 0.1657, 0.1481, -0.5794, 0.1657, 0.1481, 0.5794, 0.0445, 0.1481, 0.5794, 0.6815, 2, 0.8863, 0.1657, 0.1481, -0.5794, 0.6815, 2, -0.8863, 0.6815, 2, 0.8863, 0.1657, 0.1481, 0.5794, 0.1657, 0.1481, -0.5794, 0.4961, 2, 0.8863, 0.1657, 0.1481, 0.5794, 0.6815, 2, 0.8863, 0.4961, 2, 0.8863, 0.0445, 0.1481, 0.5794, 0.1657, 0.1481, 0.5794, 0.6815, 2, -0.8863, 0.0445, 0.1481, -0.5794, 0.4961, 2, -0.8863, 0.6815, 2, -0.8863, 0.1657, 0.1481, -0.5794, 0.0445, 0.1481, -0.5794)

[node name="LightTask" type="Node3D"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
script = ExtResource("1_px3tk")

[node name="light_card" type="Node3D" parent="." groups=["lightcard"]]
transform = Transform3D(0.0841293, 0, -0.116949, 0, 0.144065, 0, 0.116949, 0, 0.0841293, -2.30001, -2.63339, -0.129397)

[node name="card" type="MeshInstance3D" parent="light_card"]
mesh = SubResource("ArrayMesh_jbwkd")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="light_card"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="light_card/Area3D"]
shape = SubResource("ConcavePolygonShape3D_krh07")

[node name="switch_for_lightning_card" type="Node3D" parent="." groups=["lightcardswitch"]]
transform = Transform3D(-1.06169e-08, 0, -0.242886, 0, 0.242886, 0, 0.242886, 0, -1.06169e-08, 1.77701, -1.32524, -0.04611)

[node name="Cube" type="MeshInstance3D" parent="switch_for_lightning_card"]
mesh = SubResource("ArrayMesh_riy27")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="switch_for_lightning_card"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="switch_for_lightning_card/Area3D"]
shape = SubResource("ConcavePolygonShape3D_3ixr0")

[node name="card" type="MeshInstance3D" parent="switch_for_lightning_card"]
transform = Transform3D(-0.221401, 0.826281, 4.92257e-08, -0.826281, -0.221401, 3.547e-08, 4.7002e-08, -3.8368e-08, 0.855429, 0.497297, 1.79682, 4.01862e-09)
mesh = SubResource("ArrayMesh_jbwkd")
skeleton = NodePath("")
